[gd_scene load_steps=3 format=3 uid="uid://d2s13nnrgu68v"]

[ext_resource type="Script" uid="uid://37q61wg3agu5" path="res://autoloads/quests/_quest_ui.gd" id="1_3864o"]
[ext_resource type="PackedScene" uid="uid://c66mwpsp7rkj1" path="res://autoloads/quests/_quest_tracker.tscn" id="2_rvoj4"]

[node name="QuestUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3864o")

[node name="Quests" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(212, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Quests"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Quests/MarginContainer"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="Quests/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Quests/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Quests/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quest Description"

[node name="ObjectivesList" type="VBoxContainer" parent="Quests/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RewardsList" type="VBoxContainer" parent="Quests/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestTracker" parent="." instance=ExtResource("2_rvoj4")]
visible = false
layout_mode = 1
